--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       db:
         condition: service_healthy
     volumes:
-      - ./db/migrations:/migrations
+      - ./internal/db/migrations:/migrations
     command:
       ["-path", "./migrations/", "-database",  "postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@db:5432/$POSTGRES_DB?sslmode=disable", "up"]
 
